<resources>
    <string name="app_name">Shing Shing</string>
    <string name="app_name_two">Shing\nShing</string>
    <string name="general_button_privacidad">Privacidad</string>
    <string name="general_button_politica_privacidad">Politica de privacidad</string>
    <string name="general_button_terminos">Terminos y Condiciones</string>
    <string name="general_button_enviar">Enviar</string>
    <string name="general_button_vale">Vale</string>
    <string name="general_button_guardar">Guardar</string>
    <string name="general_button_eliminar">Eliminar</string>
    <string name="general_button_si_eliminar">Si, Eliminar</string>
    <string name="general_button_cancelar">Cancelar</string>
    <string name="general_button_aceptar">Aceptar</string>
    <string name="general_button_salir">Salir</string>
    <string name="general_msg_acepto">Acepto</string>
    <string name="general_msg_esperar">Por favor espere un momento...</string>
    <string name="general_error">Ocurrió un error, intenta más tarde</string>
    <string name="login_title_correo">Correo / Teléfono</string>
    <string name="login_title_contrasena">Contraseña</string>
    <string name="login_title_nuevo">Inicia sesión con</string>
    <string name="login_title_crea">Crea una cuenta</string>
    <string name="login_button_iniciar">Iniciar Sesión</string>
    <string name="login_button_olvidar">Olvidé mi contraseña :(</string>
    <string name="login_error_correo">Favor de ingresar un correo eléctronico valido</string>
    <string name="login_error_telefono">Favor de ingresar un teléfono valido</string>
    <string name="login_error_contrasena">Favor de ingresar la contraseña</string>
    <string name="login_error_servicio">Favor de validar el usuario y contraseña</string>
    <string name="intro_msg1">Bienvenido,\n¡ahora formas parte\nde Shing Shing!</string>
    <string name="opcion_eliminar_cuenta_title">¿En verdad quieres hacer esto?</string>
    <string name="opcion_eliminar_cuenta_subtitle">En Shing Shing\nte vamos a extrañar :(</string>
    <string name="eliminar_cuenta_title">Eliminar Cuenta</string>
    <string name="eliminar_cuenta_subtitle">Al eliminar tu cuenta se borrarán tus Datos personales, Tickets, Historial y Saldo actual de tu cuenta.\n\nAyudanos a conocer el motivo de tu partida</string>
    <string name="eliminar_cuenta_motivo">Motivo</string>
    <string name="eliminar_cuenta_comentarios">Comentarios</string>
    <string name="eliminar_cuenta_regresar">Regresar a Shing Shing</string>
    <string name="listo_title">¡Listo!</string>
    <string name="listo_msg_sumaste">Sumaste $%d\na tu saldo, ¡Sigue así!</string>
    <string name="privacidad_title">AVISO DE PRIVACIDAD</string>
    <string name="privacidad_texto_intro">SHING SHING, un producto de TRADENIAL S.A de C.V, con domicilio conocido en la entidad de Ciudad de México, país México, y portal de internet www.shingshing.com, es el responsable del uso y protección de sus datos personales, y al respecto le informamos lo siguiente: </string>
    <string name="privacidad_texto_01_subtitulo">\n¿Para qué fines utilizaremos sus datos personales?</string>
    <string name="privacidad_texto_01">Los datos personales que recabamos de usted, los utilizaremos para las siguientes finalidades que son necesarias para el servicio que solicita:
        \n\n&#8226;\t\tCreación de cuenta y perfil de usuario
        \n&#8226;\t\tManejo de información con instituciones bancarias
        \n&#8226;\t\tValidación de autenticidad del usuario respecto al perfil
        \n&#8226;\t\tAdministración de información solicitada por los clientes de la aplicación respecto del comportamiento del usuario
        \n&#8226;\t\tMercadotecnia o publicitaria
        \n&#8226;\t\tProspección comercial</string>
    <string name="privacidad_texto_02_subtitulo">\n¿Qué datos personales utilizaremos para estos fines?</string>
    <string name="privacidad_texto_02">Para llevar a cabo las finalidades descritas en el presente aviso de privacidad, utilizaremos los siguientes datos personales:
        \n\n&#8226;\t\tNombre
        \n&#8226;\t\tEstado Civil
        \n&#8226;\t\tFecha de nacimiento
        \n&#8226;\t\tNacionalidad
        \n&#8226;\t\tDomicilio
        \n&#8226;\t\tTeléfono celular
        \n&#8226;\t\tCorreo electrónico
        \n&#8226;\t\tFirma electrónica
        \n&#8226;\t\tEdad
        \n&#8226;\t\tFotografía
        \n&#8226;\t\tPuesto o cargo que desempeña
        \n&#8226;\t\tTítulos
        \n&#8226;\t\tCuentas bancarias
        \n&#8226;\t\tNúmero de tarjetas de crédito
        \n&#8226;\t\tPasatiempos
        \n&#8226;\t\tPerfil de redes sociales como Facebook y Google+</string>
    <string name="privacidad_texto_03_subtitulo">\n¿Con quién compartimos su información personal y para qué fines?</string>
    <string name="privacidad_texto_03a">Le informamos que sus datos personales son compartidos dentro del país con las siguientes personas, empresas,
        organizaciones o autoridades distintas a nosotros, para los siguientes fines:</string>
    <string name="privacidad_texto_03b">Su información no será compartida con otra institución o persona, ya sea física o moral,
        salvo en los casos que establece la Ley Federal para la Protección de Datos Personales, en su Artículo 22.</string>
    <string name="privacidad_texto_04_subtitulo">\n¿Cómo puede acceder, rectificar o cancelar sus datos personales, u oponerse a su uso?</string>
    <string name="privacidad_texto_04">Usted tiene derecho a conocer qué datos personales tenemos de usted, para qué los utilizamos y las condiciones del
        uso que les damos (Acceso). Asimismo, es su derecho solicitar la corrección de su información personal en caso de que esté desactualizada,
        sea inexacta o incompleta (Rectificación); que la eliminemos de nuestros registros o bases de datos cuando considere que la
        misma no está siendo utilizada adecuadamente (Cancelación) considerando que esta acción requiere eliminar su perfil del plan de lealtad o
        aplicación; así como oponerse al uso de sus datos personales para fines específicos (Oposición). Estos derechos se conocen como derechos ARCO.
        \n\nPara el ejercicio de cualquiera de los derechos ARCO, usted deberá presentar la solicitud respectiva a través del siguiente medio:
        \n\nA través del perfil registrado, ir a la sección de contacto o asistencia y solicitar el acceso a los
        derechos ARCO, en el mismo medio digital
        \n\nPara conocer el procedimiento y requisitos para el ejercicio de los derechos ARCO, ponemos a su disposición el siguiente medio:
        \n\nA través del medio digital o app, ingresando a su perfil, en el menú lateral, en la sección de contacto o asistencia, o a través de un correo electrónico a la dirección de contacto@tradenial.com</string>
    <string name="privacidad_texto_05_subtitulo">\nUsted puede revocar su consentimiento para el uso de sus datos personales</string>
    <string name="privacidad_texto_05">Usted puede revocar el consentimiento que, en su caso, nos haya otorgado para el tratamiento de
        sus datos personales. Sin embargo, es importante que tenga en cuenta que no en todos los casos podremos atender su solicitud o concluir el uso de forma inmediata, ya que es posible que por
        alguna obligación legal requiramos seguir tratando sus datos personales. Asimismo, usted deberá considerar que para ciertos fines, la revocación de su consentimiento implicará que no le podamos
        seguir prestando el servicio que nos solicitó, o la conclusión de su relación con nosotros.
        \n\nPara revocar su consentimiento deberá presentar su solicitud a través del siguiente medio:
        \n\nA través del medio electrónico o app, ingresando a su perfil, en la sección de contacto o asistencia. O a través de un correo electrónico a la dirección de contacto@tradenial.com
        \n\nPara conocer el procedimiento y requisitos para la revocación del consentimiento, ponemos a su disposición el siguiente medio:
        \n\nA través del medio electrónico o app, ingresando a su perfil, en la sección de contacto o asistencia. O a través de un correo electrónico a la dirección de contacto@tradenial.com</string>
    <string name="privacidad_texto_06_subtitulo">\n¿Cómo puede limitar el uso o divulgación de su información personal?</string>
    <string name="privacidad_texto_06">Con objeto de que usted pueda limitar el uso y divulgación de su información personal, le ofrecemos los siguientes medios:
        \n\nA través del medio electrónico o app, ingresando a su perfil, en la sección de contacto o asistencia.
        \nO a través de un correo electrónico a la dirección de contacto@tradenial.com</string>
    <string name="privacidad_texto_07_subtitulo">\nEl uso de tecnologías de rastreo en nuestro portal de internet</string>
    <string name="privacidad_texto_07">Le informamos que en nuestra página de internet utilizamos cookies, web beacons u otras tecnologías, a través de las cuales es posible monitorear su comportamiento como usuario de internet, así como brindarle un mejor servicio y experiencia al navegar en nuestra página. Los datos personales que recabamos a través de estas tecnologías, los utilizaremos para los siguientes fines:
        \n\nPara intercambio de información con los clientes del plan de lealtad o app, para determinar hábitos de consumo y perfiles de consumidores.
        \n\nLos datos personales que obtenemos de estas tecnologías de rastreo son los siguientes:

        \n\n&#8226;\t\tIdentificadores, nombre de usuario y contraseñas de una sesión
        \n&#8226;\t\tIdioma preferido por el usuario
        \n&#8226;\t\tRegión en la que se encuentra el usuario
        \n&#8226;\t\tTipo de navegador del usuario
        \n&#8226;\t\tTipo de sistema operativo del usuario
        \n&#8226;\t\tFecha y hora del inicio y final de una sesión de un usuario
        \n&#8226;\t\tPáginas web visitadas por un usuario
        \n&#8226;\t\tBúsquedas realizadas por un usuario
        \n&#8226;\t\tPublicidad revisada por un usuario
        \n&#8226;\t\tListas y hábitos de consumo en páginas de compras
        \n&#8226;\t\tRedes sociales que utiliza

        \n\nAsimismo, le informamos que su información personal será compartida con las siguientes personas, empresas, organizaciones o autoridades distintas a nosotros, para los siguientes fines:</string>
    <string name="privacidad_texto_08_subtitulo">\n¿Cómo puede conocer los cambios en este aviso de privacidad?</string>
    <string name="privacidad_texto_08">El presente aviso de privacidad puede sufrir modificaciones, cambios o actualizaciones derivadas de
        nuevos requerimientos legales; de nuestras propias necesidades por los productos o servicios que ofrecemos; de nuestras prácticas de
        privacidad; de cambios en nuestro modelo de negocio, o por otras causas.

        \n\nNos comprometemos a mantenerlo informado sobre los cambios que pueda sufrir el presente aviso de privacidad, a través de: A través
        del correo electrónico que el usuario haya registrado en su perfil dentro del medio electrónico o app, o en una pantalla emergente que
        aparecerá al ingresar en la app y en la página de internet www.shingshing.com.

        \n\nEl procedimiento a través del cual se llevarán a cabo las notificaciones sobre cambios o actualizaciones al presente aviso de privacidad es el siguiente:

        \n\nA través del correo electrónico que el usuario haya registrado en su perfil dentro del medio electrónico o app, o en una
        pantalla emergente que aparecerá al ingresar en la app y en la pagina de internet www.shingshing.com

        \n\nEl Aviso Integral de Privacidad, lo puede consultar en la sección de Perfil, en el menú lateral, ingresar a la liga de Aviso de Privacidad,
        o en el pie de página del sitio web www.shingshing.com.

        \n\nÚltima actualización: 05/11/2019</string>
</resources>