<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".privacidad.PrivacidadActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/nunito_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_title"/>

            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_intro"/>

            <!--SECCION 01-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_01_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_01"/>
            <!--SECCION 02-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_02_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_02"/>
            <!--SECCION 03-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_03_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_03a"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    android:background="#000000">
                    <TableRow>
                        <TextView
                            style="@style/nunito_table_header"
                            android:text="Destinatario de los datos personales"/>
                        <TextView
                            style="@style/nunito_table_header"
                            android:text="Finalidad"/>
                        <TextView
                            style="@style/nunito_table_header"
                            android:text="Requiere del consentimiento"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="Instituciones bancarias"/>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="transferencia de beneficios generados por el plan de\n lealtad o app"/>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="No"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="Intercambio de información personal del usuario con
                            \nlos clientes del plan de lealtad o app"/>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="Generar valor a los clientes del plan de lealtad
                            \ndeterminando habitos de consumo y perfiles del consumidor"/>
                        <TextView
                            style="@style/nunito_table_cell"
                            android:text="No"/>
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_03b"/>
            <!--SECCION 04-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_04_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_04"/>
            <!--SECCION 05-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_05_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_05"/>
            <!--SECCION 06-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_06_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_06"/>
            <!--SECCION 07-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_07_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_07"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    android:background="#000000">
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/nunito_table_header"
                        android:text="Destinatario de los datos personales"/>
                    <TextView
                        style="@style/nunito_table_header"
                        android:text="Finalidad"/>
                </TableRow>
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/nunito_table_cell"
                        android:text="Clientes del plan de lealtad o aplicación, pueden ser
                        \nempresas y marcas de consumo masivo y/o manejadas en los principales
                        \nautoservicios, así como empresas con puntos de venta de algún producto
                        \no servicio establecidos formalmente y con emisión de ticket de compra."/>
                    <TextView
                        style="@style/nunito_table_cell"
                        android:text="generar valor a los usuarios del plan de lealtad o app."/>
                </TableRow>
            </TableLayout>
            </HorizontalScrollView>
            <!--SECCION 08-->
            <TextView
                style="@style/nunito_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_08_subtitulo"/>
            <TextView
                style="@style/nunito_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacidad_texto_08"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>