<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvEliminarTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_extrabold"
            android:textSize="16sp"
            android:text="@string/opcion_eliminar_cuenta_title"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvEliminarSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_light"
            android:textSize="14sp"
            android:text="@string/opcion_eliminar_cuenta_subtitle"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnEliminarCancelar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/naranja"
            android:fontFamily="@font/font_nunito_regular"
            android:textSize="16sp"
            android:text="@string/general_button_cancelar"
            android:textAllCaps="false"
            android:background="@drawable/round_corner_mamey"
            android:layout_marginStart="25dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarSubtitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnEliminarEliminar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/font_nunito_regular"
            android:textSize="16sp"
            android:text="@string/general_button_eliminar"
            android:textAllCaps="false"
            android:background="@drawable/round_corner_naranja"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarSubtitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>