<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.menu.opciones.eliminar.EliminarCuentaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvEliminarCuentaTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_black"
            android:textSize="26sp"
            android:text="@string/eliminar_cuenta_title"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvEliminarCuentaSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_regular"
            android:textSize="16sp"
            android:text="@string/eliminar_cuenta_subtitle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarCuentaTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvEliminarCuentaTituloMotivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_nunito_extrabold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/eliminar_cuenta_motivo"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarCuentaSubtitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etEliminarCuentaMotivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_gris"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_light"
            android:textSize="16sp"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarCuentaTituloMotivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill,LabelFor"/>

        <TextView
            android:id="@+id/tvEliminarCuentaTituloComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_nunito_extrabold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/eliminar_cuenta_comentarios"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/etEliminarCuentaMotivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etEliminarCuentaComentarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_gris"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_nunito_light"
            android:textSize="16sp"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEliminarCuentaTituloComentarios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill,LabelFor"/>

        <Button
            android:id="@+id/btnEliminarCuentaEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_naranja"
            android:textColor="@android:color/white"
            android:fontFamily="@font/font_nunito_extrabold"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:text="@string/general_button_eliminar"
            android:layout_marginTop="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etEliminarCuentaComentarios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvEliminarCuentaRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_nunito_regular"
            android:textSize="16sp"
            android:textColor="@color/azul"
            android:text="@string/eliminar_cuenta_regresar"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminarCuentaEliminar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>